Multi-cloud-project/app/kubernetes/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: multi-cloud-ingress
spec:
  hosts:
    - "*"
  gateways:
    - istio-ingressgateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: multi-cloud-service
            port:
              number: 80
